@@ -222,6 +222,15 @@ Example  : \n\r\
 The thief quickly prepares a handful of caltrops and drops them into \
 every room he or she enters automatically.
 
+SKILL_AUTOCLIMB=AUTOCLIMB
+AUTO_CLIMB=AUTOCLIMB
+AUTOCLIMB=<ABILITY>\
+Usage    : AUTOCLIMB\n\r\
+Example  : \n\r\
+The player begins climbing around whenever they move. \
+By turning this on, the player uses half their normal movement cost \
+for climbing.  Enter AUTOCLIMB again to turn it off. 
+
 SKILL_AUTOCRAWL=AUTOCRAWL
 AUTO_SWIM=AUTOCRAWL
 AUTOCRAWL=<ABILITY>\
