@@ -44,6 +44,7 @@
   42. New mob type: GenCow -- the drinkable, rideable, mob
   43. PROWESSOPTIOS and the LISTFILE can now be used to show char stats as words.
   44. Prop_ItemSlotFiller now supports ADDS argument for another way to add stuff.
+  45. New skills: autoclimb
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
